group 'moe.giga'
version '1.0-SNAPSHOT'

apply plugin: 'application' // implicitly applies java plugin

mainClassName = 'moe.giga.discord.LucoaBot'
applicationDefaultJvmArgs = ["-Dfile.encoding=UTF-8"]

sourceCompatibility = 1.8

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    compile 'org.tinylog:tinylog:1.3.4'
    compile 'org.tinylog:slf4j-binding:1.3.4'
    compile 'com.alibaba:fastjson:1.2.46'
    compile 'net.dv8tion:JDA:3.6.0_354'
    compile 'org.xerial:sqlite-jdbc:3.21.0.1'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

jar {
    baseName = project.name
    manifest {
        attributes 'Implementation-Version': version
        attributes 'Main-Class': 'moe.giga.discord.LucoaBot'
    }
}

task fatJar(type: Jar) {
    manifest {
        attributes 'Implementation-Version': version
        attributes 'Main-Class': 'moe.giga.discord.LucoaBot'
    }
    baseName = project.name + '-withDependencies'
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

def updateApplicationProperties() {
    def configFile = new File('src/main/resources/application.properties')
    println "updating version to '${version}' in ${configFile}"
    String configContent = configFile.getText('UTF-8')
    configContent = configContent.replaceAll(/info\.build\.version=.*/, "info.build.version=${version}")
    configFile.write(configContent, 'UTF-8')
}

allprojects {
    updateApplicationProperties()
}

//Creates the w/ dependencies jar.
assemble.dependsOn fatJar